--- a/outlet.html
+++ b/outlet.html
@@ -20,6 +20,8 @@
             <h1 class="nav-bar-links">BRANCHES</h1>
             <h1 class="nav-bar-links">COMPLAINTS</h1>
         </div>
+        <h1 style="color: white;">mens</h1>
+
         <div class="kurta-container">
             <div class="kurta-1" id="kurtas"></div>
             <div class="kurta-2" id="kurtas"></div>
