--- a/outlet.html
+++ b/outlet.html
@@ -39,7 +39,9 @@
             <div class="kurta-7" id="kurtas"></div>
             <div class="kurta-8" id="kurtas"></div>
             <div class="kurta-9" id="kurtas"></div>
-            <div class="kurta-10" id="kurtas"></div>
+            <div class="kurta-10" id="kurtas">
+                
+            </div>
             <i class="fa-solid fa-circle-chevron-right"></i>
 
         </div>
